sakhi + its topics

--- a/data/snippets/parallax-slider.html
+++ b/data/snippets/parallax-slider.html
@@ -8,7 +8,7 @@
 						<div class="emphasis-title dark text-center" style="transform: translate3d(0px,calc(150px * var(--cnvs-scroll-end)), 0px); opacity:calc(1 * var(--cnvs-scroll-ratio));">
 							<h3>Welcome to</h3>
 							<h1 data-animate="fadeInUp"><strong class="cursive" style="letter-spacing: 3px;">Awaken To Life</strong></h1>
-							<p class="h4">The official website of <span class="h3 cursive">Vidya Shankar Chakravarthy</span></p>
+							<p class="h4">with <span class="h3 cursive">Vidya Shankar Chakravarthy</span></p>
 						</div>
 					</div>
 				</div>
